    - LV2: changed number of output channels to 16 stereo, just like
      the VST and AU plugins
    - LV2: fixed save/restore of SFZ state (patch by David Robillard)
    - LV2: made LV2 plugin buildable on Windows and Mac
    - VST: implemented retrieval and switching of programs using the
      sampler's internal MIDI instrument mapping system

  * MIDI driver:
    - ALSA MIDI driver supports now "NAME" device parameter, for overriding
      the ALSA sequencer client name
    - removed limit of maximum amount of MIDI ports per MIDI device, since
      there is no reason for this limit
    - MME: fixed memory handling bug found with cppcheck
    - MME: removed compiler warning
    - CoreMIDI: implemented driver specific port parameter "CORE_MIDI_BINDINGS",
      which allows to retrieve the list of CoreMIDI clients / ports and to connect
      to them a la JACK, via the usual sampler APIs
    - CoreMIDI: added driver specific port parameter "AUTO_BIND", if enabled
      the driver will automatically connect to other CoreMIDI clients' ports
      (e.g. external MIDI devices being attached to the Mac)
    - added support for MIDI note on velocity filter
    - CoreMIDI: fixed memory deallocation error
    - Fixed variable underflow in VirtualMidiDevice, which caused graphical
      virtual keyboards in frontends / instrument editors being stuck.
    - Bugfix in VirtualMidiDevice: process note on with velocity 0 as note off.
    - Implemented missing handling of MIDI "running status".
    - CoreMIDI fix: a MIDIPacket can contain more than one event per packet.
    - MME bugfix: driver wasn't closed properly
    - CoreMIDI: automatically connect to all input sources by default (driver
      parameter "AUTO_BIND").

  * audio driver:
    - ASIO driver fixes for newer gcc versions (fix from PortAudio)
    - JACK audio: react on sample rate changes.
    - JACK audio: react on buffer size changes.
    - JACK audio: jack_port_get_buffer() was cached and called outside